# nsmbw-project

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  README.md  compile_flags.txt
source/: CMakeLists.txt  Four.cpp  Module.cpp  Module.ld  System.h
source/egg/core/: CMakeLists.txt  eggController.cpp  eggController.h  eggDvdFile.h  eggFile.h  eggHeap.h  eggSingleton.h
source/egg/math/: eggMath.h  eggVector.h
source/egg/util/: CMakeLists.txt  eggEffect.cpp  eggEffect.h  eggException.cpp  eggException.h
source/magic_enum/: magic_enum.hpp
source/mkwcat/: Concepts.hpp  Enum.h  Literals.hpp  Macro.hpp  Misc.hpp  NoConsteval.hpp  Port.hpp  Relocate.hpp  ToString.hpp  TypePack.hpp  VTable.hpp
source/msl/: CMakeLists.txt
source/msl/c/: CMakeLists.txt  ansi_files.c  assert.h  limits.h  stdio.h
source/msl/c/common/: CMakeLists.txt  alloc.c  ansi_files.c  ansi_files.h  buffer_io.c  direct_io.c  file_io.c  file_io.h  locale.c  mbstring.c  mem.c  misc_io.c  misc_io.h  printf.c  scanf.c  stdio_api.h  string.c  strtoul.c  wchar_io.c
source/msl/c/include/: assert.h  ctype.h  float.h  locale.h  math.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  wchar.h
source/msl/c/internal/: NULL.h  __locale.h  size_t.h
source/msl/c/math/: w_sqrt.c
source/msl/cpp/: algorithm  any  array  bit  bitset  cctype  cfloat  cmath  compare  concepts  coroutine  cstdarg  cstddef  cstdio  cstdlib  cstring  cwchar  functional  initializer_list  iterator  limits  map  memory  optional  span  string  string_view  type_traits  utility  variant  vector
source/msl/runtime/: __mem.c  runtime.c
source/msl/trk/: CMakeLists.txt  mslsupp.c
source/nw4r/db/: db_console.h  db_exception.h
source/nw4r/g3d/: g3d_fog.h  g3d_gpu.h  g3d_init.h  g3d_light.h  g3d_maya.h  g3d_obj.h  g3d_resanm.h  g3d_rescommon.h  g3d_resdict.h  g3d_resfile.h  g3d_scnobj.h
source/nw4r/lyt/: TexMap.h  TextBox.h
source/nw4r/math/: types.h
source/nw4r/snd/: BasicSound.h  SoundStartable.h
source/nw4r/ut/: Font.h  TagProcesorBase.h  TextWriter.h
source/revolution/: mtx.h  nand.h  os.h  pad.h  si.h  types.h  wpad.h
source/revolution/arc/: arc.c
source/revolution/dvd/: dvdfs.c
source/revolution/gx/: GXEnum.h
source/revolution/nand/: nand.c
source/revolution/os/: CMakeLists.txt  OS.c  OSError.h  OSReset.c  OSReset.h  OSRtc.c  OSRtc.h  OSThread.h  OSTime.c  OSTime.h
source/revolution/pad/: CMakeLists.txt  Pad.c  PadClamp.c  Padclamp.c
source/revolution/si/: SIBios.c
source/wiimj2d/: CMakeLists.txt
source/wiimj2d/component/: CMakeLists.txt  c_json.cpp  c_json.h  c_list.h  c_tree.cpp  c_tree.h
source/wiimj2d/d_bases/: CMakeLists.txt  d_Continue.cpp  d_Continue.h  d_ControllerInformation.h  d_CourseSelectMenu.cpp  d_CourseSelectMenu.h  d_DateFile.h  d_EasyPairing.h  d_EventOpeningTitle.cpp  d_EventOpeningTitle.h  d_FileSelect.h  d_GameOver.cpp  d_GameOver.h  d_InfoWindow.h  d_LetterWindow.h  d_MessageWindow.h  d_MiniGameCannon.cpp  d_MiniGameCannon.h  d_MiniGameWire.cpp  d_MiniGameWire.h  d_ModelPlayManager.h  d_MultiCourseSelect.cpp  d_MultiCourseSelect.h  d_NumberOfPeopleChange.h  d_PointResultDateFile.cpp  d_PointResultDateFile.h  d_StaffCreditScore.cpp  d_StaffCreditScore.h  d_StockItem.cpp  d_StockItem.h  d_StockItemShadow.h  d_YesNoWindow.h  d_a_castle_kokoopa_demo_1st.cpp  d_a_chukan_point.cpp  d_a_chukan_point.h  d_a_lift_remocon_seesaw.h  d_a_lift_ride_move.cpp  d_a_lift_ridemove.cpp  d_a_lift_ridemove.h  d_a_mini_game_balloon.cpp  (+43 more)
source/wiimj2d/d_en_boss/: d_pregamelyt.h
source/wiimj2d/d_enemies/: d_a_en_block.cpp  d_a_en_block.h  d_a_en_bomhei.h  d_a_en_goalpole.cpp  d_a_en_goalpole.h  d_a_en_item.cpp  d_a_en_item.h  d_a_en_remocon_cannon.cpp  d_a_en_remocon_cannon.h
source/wiimj2d/d_error/: CMakeLists.txt  d_reset.cpp  d_reset.h
source/wiimj2d/d_player/: d_SmallScoreManager.h  d_WarningManager.h  d_a_en_hatena_balloon.cpp  d_a_en_hatena_balloon.h  d_a_iceball.cpp  d_a_player.cpp  d_a_player.h  d_a_yoshi.cpp  d_a_yoshi.h  d_bg_gm.cpp  d_bg_gm.h  d_gamedisplay.cpp  d_gamedisplay.h  d_s_boot.cpp
source/wiimj2d/d_profile/: d_all_base_headers.h  d_profile.h  d_profile_formatted_table.inc  d_profile_static.cpp  d_profile_table.inc
source/wiimj2d/d_project/: CMakeLists.txt  d_a_bg_carry.cpp  d_a_bg_carry.h  d_a_bg_lift.cpp  d_a_bg_lift.h  d_base_dump.cpp  d_base_dump.h  d_exception.cpp  d_exception.h  d_nextgoto_list.cpp  d_nextgoto_list.h  d_nextgoto_randomizer.cpp  d_nextgoto_randomizer.h  d_project.cpp  d_project.h
source/wiimj2d/d_system/: CMakeLists.txt  d_CourseSelectManager.cpp  d_CourseSelectManager.h  d_PanelObjList.cpp  d_PanelObjList.h  d_PanelObjMgr.cpp  d_PanelObjMgr.h  d_a_en_blockmain.cpp  d_a_en_blockmain.h  d_a_en_dpakkun_base.cpp  d_a_en_shell.cpp  d_a_lift_remocon_main.cpp  d_a_player_base.cpp  d_a_player_base.h  d_a_player_demo_manager.cpp  d_a_player_key.cpp  d_a_player_manager.cpp  d_a_player_manager.h  d_actor.cpp  d_actor.h  d_actor_state.cpp  d_actor_state.h  d_actorcreate_mng.h  d_balloon_mng.cpp  d_base.cpp  d_base_actor.h  d_bc.cpp  d_bc.h  d_bg.cpp  d_bg.h  d_bg_ctr.cpp  d_bg_ctr.h  d_bg_texture.cpp  d_bg_texture.h  d_block_mng.cpp  d_cc.cpp  d_cc.h  d_cyuukan.cpp  d_cyuukan.h  d_ef.cpp  (+50 more)
source/wiimj2d/framework/: CMakeLists.txt  f_base.h  f_feature.cpp  f_feature.h  f_list.cpp  f_list.h  f_list_nd.h  f_manager.cpp  f_manager.h  f_param.h  f_tree.h
source/wiimj2d/machine/: CMakeLists.txt  m_archive.cpp  m_archive.h  m_dvd.cpp  m_dvd.h  m_dvd_archive.cpp  m_ef.h  m_heap.cpp  m_heap.h  m_mtx.h  m_nandfile.cpp  m_nandfile.h  m_pad.cpp  m_pipe.cpp  m_pipe.h  m_vec.cpp  m_vec.h
source/wiimj2d/sound/: SndAudioMgr.cpp  SndAudioMgr.h  SndObjectMap.cpp  SndObjectPlayer.cpp  SndSceneMgr.cpp  SndSceneMgr.h
source/wiimj2d/state/: s_FStateFct.h  s_FStateMgr.h  s_FStateStateMgr.h  s_Printf.cpp  s_RangeData.h  s_State.h  s_StateMethod.cpp  s_StateMethodUsr_FI.h  s_StateMgr.h
tools/: CMakeLists.txt  fix-sda21.py  generate_symbol_map.py  insert-xml.py  make_rel.py  process_xml.py
tools/clang/: README.md
tools/wuj5/: bmg.py  wuj5.py  yaz.py
(+219 files in other folders)
